Implement Lua scripting

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,6 @@ project(GenomeScript)
 # Your Gothic 3 installation folder
 set(GOTHIC3_DIR "C:/Program Files (x86)/Steam/steamapps/common/Gothic 3")
 
-# stdcall calling convention as default
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Gz")
-
 # All source and header files
 set(SOURCES
 	src/common.hpp
@@ -24,6 +21,7 @@ set(SOURCES
 # The library with all headers and source files
 add_library(GenomeScript SHARED ${SOURCES})
 target_include_directories(${PROJECT_NAME} PUBLIC "include")
+target_compile_options(${PROJECT_NAME} PUBLIC /Gz)
 
 # How to group the files in the Solution Explorer
 source_group(TREE "${CMAKE_CURRENT_LIST_DIR}/src" PREFIX "src" FILES ${SOURCES})
@@ -32,21 +30,33 @@ source_group(TREE "${CMAKE_CURRENT_LIST_DIR}/detours" PREFIX "detours" FILES "de
 
 # Add Microsoft Detours library (MIT License)
 add_subdirectory(detours)
-target_link_libraries(${PROJECT_NAME} detours::detours)
+target_compile_options(detours INTERFACE /Gz)
+target_link_libraries(${PROJECT_NAME} PUBLIC detours::detours)
 
 # Import the spdlog library (MIT License)
 add_subdirectory(spdlog)
-target_link_libraries(${PROJECT_NAME} spdlog::spdlog)
+target_compile_options(spdlog PUBLIC /Gz)
+target_link_libraries(${PROJECT_NAME} PUBLIC spdlog::spdlog)
+target_compile_definitions(${PROJECT_NAME} PUBLIC SPDLOG_COMPILED_LIB)
 
 # Import gothic3sdk
 add_subdirectory(gothic3sdk)
-target_link_libraries(${PROJECT_NAME} gothic3sdk)
+target_compile_options(gothic3sdk PUBLIC /Gz)
+target_link_libraries(${PROJECT_NAME} PUBLIC gothic3sdk)
+
+# Import Lua scripting engine
+add_subdirectory(Lua)
+add_subdirectory(LuaBridge3)
+target_compile_options(lua_static PUBLIC /Gz)
+target_compile_options(LuaBridge INTERFACE /Gz)
+target_link_libraries(${PROJECT_NAME} PUBLIC lua_static LuaBridge)
 
 # Properties of the DLL
 target_compile_features(${PROJECT_NAME} PUBLIC cxx_std_17)			# C++17
 target_compile_options(${PROJECT_NAME} PUBLIC /Od)					# Disable optimizations to make Detours work
 #target_compile_options(${PROJECT_NAME} PUBLIC /Zc:preprocessor)	    # Force the standards-compliant preprocessor
 #target_precompile_headers(${PROJECT_NAME} PRIVATE "include/pch.h")  # Precompiled headers to speed up compilation
+target_link_libraries(${PROJECT_NAME} PUBLIC dbghelp)
 
 # How to handle CMake-generated targets
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
