--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "spdlog"]
 	path = spdlog
 	url = https://github.com/gabime/spdlog.git
+[submodule "Lua"]
+	path = Lua
+	url = https://github.com/walterschell/Lua.git
+[submodule "LuaBridge3"]
+	path = LuaBridge3
+	url = https://github.com/kunitoki/LuaBridge3.git
